timing_120803: Bug fix in setting timing_detail_limit default.
               [Patrick Worley]
timing_120731: Correction in Makefile for serial build [Jim Edwards]
timing_120728: Replace process subset optional parameter in t_prf with 
	       outpe_thispe optional parameter. Change def_perf_outpe_num to 0. 
	       [Patrick Worley]
timing_120717: Retain timestamp on cp in Makefile   [Jim Edwards]
timing_120710: Correct issue in Makefile [Jim Edwards]
timing_120709: Change for BGP to measure on compute nodes rather than IO nodes only,
               minor Change in Makefile so that gptl can build seperate from csm_share
               in cesm [Jim Edwards]
timing_120512: Bug fix in global statistics logic for when a thread has no events 
	       to contribute to the merge (mods to gptl.c)
	       [Patrick Worley]
timing_120419: Minor changes for mpi-serial compile (jedwards)
timing_120408: Make HAVE_COMM_F2C default to true. (jedwards)
timing_120110: Update to GPTL 4.1 source (mods to gptl.c and GPTLprint_memusage)
               [Jim Rosinski (GPTL 4.1), Patrick Worley]
timing_120109: Bug fix (adding shr_kind_i8 to shr_kind_mod list)
timing_111205: Update to gptl 4.0 (introducing CESM customizations); 
               support for handles in t_startf/t_stopf;
               support for restricting output to explicitly named process subsets
               [Jim Rosinski (gptl 4.0), Patrick Worley]
timing_111101: Workaround for mpi_rsend issue on cray/gemini
timing_110928: Add a Makefile and build as a library usable by mct and pio
timing_101215: No changes from previous tag other than updating Changelog
timing_101210: Fix interface to cesm build system, add workaround for xlf bug
timing_101202: updated get_memusage and print_memusage from GPTL version 3.7; adds
	       improved support for MacOS and SLASHPROC
	       [Jim Rosinski, Chuck Bardeen (integrated by P. Worley)]
timing_091021: update to GPTL version 3.5; rewrite of GPTLpr_summary: much faster, merging 